<resources>
    <string name="app_name">Mercado Solto</string>
    <string name="mercado">Mercado Solto</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_confirmar_senha">Confirmar senha</string>
    <string name="entrar_main">ENTRAR</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="esqueceu_senha_main">Esqueceu a senha? Clique aqui!</string>
    <string name="voltar">VOLTAR</string>
    <string name="enviar">ENVIAR</string>
    <string name="categorias">Categorias</string>
    <string name="completar_perfil">Perfil</string>
    <string name="Chat">Chat</string>
    <string name="title_activity_categoria">CategoriaActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bot">Bot</string>
</resources>