<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.activities.MapsActivity">

    <ImageView
        android:id="@+id/ivLogoHome"
        android:layout_width="87dp"
        android:layout_height="85dp"
        android:contentDescription="@string/app_name"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintBottom_toBottomOf="@+id/tvTituloHome"
        app:layout_constraintEnd_toStartOf="@+id/tvTituloHome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTituloHome"
        app:srcCompat="@drawable/mercado_solto" />

    <TextView
        android:id="@+id/tvTituloHome"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/mercado"
        android:textAlignment="center"
        android:textColor="#0D7C13"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/categorias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivLogoHome"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/categorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloHome" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btChatHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorias" />

    <Button
        android:id="@+id/btChatHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/verde_botao"
        android:text="@string/Chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

</androidx.constraintlayout.widget.ConstraintLayout>